v6.1.0
- update exif, iptc and xmp data parsers

v6.0.2
- cleanup

v6.0.1
- bump

v6.0.0
- changes for python 3

v5.0.9
- fix splash image kept spinning in the background, eating up cpu

v5.0.8
- re-add option to disable animations

v5.0.4
- add option to disable animations

v5.0.3
- move repo to gitlab

v5.0.2
-cosmetics
- skin tweaks

v5.0.1
- add black background

v4.2.3
- don't crash when failing to retrieve skinpath

v4.2.2
- extra logging

v4.2.1
- cosmetics

v4.2.0
- add resume from last position option

v4.1.4
- better handling when picture folder is empty

v4.1.3
- use image instead of largeimage controls 

v4.1.2
- don't create empty cache file
- delete empty cache files

v4.1.1
- don't crash when advancedsettings.xml is corrupt

v4.1.0
- option to exclude dirs/files using pictureexcludes in advancedsettings.xml

v4.0.1
- fix cache creation when an empty cache file is present.

v4.0.0
- remove simplejson support

v3.0.3
- language update
- cosmetics

v3.0.2
- fix randomizing the list

v3.0.1
- fix index creation during update

v3.0.0
- bump for jarvis
- always use image index
- remove option to create an index

v2.1.9
- auto placement of exif info labels

v2.1.8
- fix background creation of image index

v2.1.7
- move music info to bottom

v2.1.6
- cosmetics

v2.1.5
- use different method to find the addon.xml of the skin

v2.1.4
- fix missing settings string
- fix crash on update due to incompatible settings

v2.1.3
- language update

v2.1.2
- make background image optional

v2.1.1
- add background image to reduce black borders

v2.1.0
- add update thread

v2.0.11
- add option to show both folder- and filename

v2.0.10
- updated language files from Transifex

v2.0.9
- deprecate xbmc.abortRequested

v2.0.8
- add missing images

v2.0.7
- fix recursive scan (paths must end with a slash)

v2.0.6
- fix update index button

v2.0.5
- fix crash on exit

v2.0.4
- apply dim value to the whole screen

v2.0.3
- more screen space for image filename